<resources>
    <string name="app_name">e-UiTM</string>

    <string name="matric_no_hint">Matric ID</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_ilearn">i-Learn</string>
    <string name="nav_eacademy">e-Academy</string>
    <string name="nav_financial">Financial Services</string>
    <string name="nav_ehep">e-HEP</string>
</resources>
