<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_ilearn"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_ilearn"/>
        <item
                android:id="@+id/nav_eacademy"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_eacademy"/>
        <item
                android:id="@+id/nav_financial"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_financial"/>
        <item
                android:id="@+id/nav_ehep"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_ehep"/>
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu/>-->
<!--    </item>-->

</menu>
