<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             app:layout_constraintTop_toTopOf="parent"
                                             app:layout_constraintBottom_toBottomOf="parent"
                                             app:layout_constraintLeft_toLeftOf="parent"
                                             app:layout_constraintRight_toRightOf="parent"
                                             app:layout_constraintStart_toStartOf="parent"
                                             app:layout_constraintEnd_toEndOf="parent"
                                             android:background="#0099cc"
                                             tools:context=".FullscreenActivity" android:visibility="visible">

    <EditText
            android:background="#ffffff"
            android:textAlignment="center"
            android:layout_width="319dp"
            android:layout_height="46dp"
            android:inputType="numberSigned"
            android:text=""
            android:hint="@string/matric_no_hint"
            android:autofillHints="@string/matric_no_hint"
            android:ems="10"
            android:id="@+id/editText4" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.349"/>

    <EditText
            android:background="#ffffff"
            android:textAlignment="center"
            android:layout_width="319dp"
            android:layout_height="46dp"
            android:inputType="textPassword"
            android:text=""
            android:hint="@string/password_hint"
            android:autofillHints="@string/password_hint"
            android:ems="10"
            android:id="@+id/editText6" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.499"/>

    <Button
            android:text="@string/login_button"
            android:layout_width="182dp"
            android:layout_height="56dp"
            android:id="@+id/ButtonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.655"/>

</androidx.constraintlayout.widget.ConstraintLayout>